# ai-cli-chatbot

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.toml
src/: config.rs  error.rs  main.rs
src/api_client/: client.rs  mod.rs
