[package]
name = "deepseek_cli_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
futures = "0.3"
toml = "0.5"
env_logger = "0.9"
thiserror = "1.0"
anyhow = "1.0"